--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -85,13 +85,13 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="main.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="opengl_circles.cpp" />
+    <ClCompile Include="opengl_user_input.cpp" />
+    <ClCompile Include="opengl_utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c" />
-    <CudaCompile Include="input.cpp" />
-    <CudaCompile Include="kernel.cpp" />
-    <CudaCompile Include="gui.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -110,7 +110,14 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
-    <CudaCompile Include="opengl.h" />
+    <ClInclude Include="opengl.h" />
+    <ClInclude Include="random.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="circle.frag" />
+    <None Include="circle.vert" />
+    <None Include="line.frag" />
+    <None Include="line.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
