--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -1,92 +1,114 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{1d72b084-b316-4b06-b793-48b4e2724837}</UniqueIdentifier>
+    <Filter Include="Miscellaneous Dependencies">
+      <UniqueIdentifier>{87235db0-5c7a-42f9-83d8-a9d98b813bbb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{bd0162c7-adf9-4f4a-aad0-58fae70e9e0e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\OpenGL">
-      <UniqueIdentifier>{dd4149a7-6362-46fb-a80e-629bc18b8ece}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\ImGui">
+    <Filter Include="Miscellaneous Dependencies\ImGui Source Files">
       <UniqueIdentifier>{83b6c6f7-af5b-4070-bf2e-c3dcafda1f2b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\ImGui">
+    <Filter Include="Miscellaneous Dependencies\ImGui Header Files">
       <UniqueIdentifier>{63e3e983-9798-466e-b2bb-9422f4d556e2}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <CudaCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </CudaCompile>
-    <CudaCompile Include="opengl.h">
-      <Filter>Header Files</Filter>
-    </CudaCompile>
-    <CudaCompile Include="gui.cpp">
-      <Filter>Source Files</Filter>
-    </CudaCompile>
-    <CudaCompile Include="kernel.cpp">
-      <Filter>Source Files</Filter>
-    </CudaCompile>
-    <CudaCompile Include="input.cpp">
-      <Filter>Source Files</Filter>
-    </CudaCompile>
+    <Filter Include="Miscellaneous Dependencies\OpenGL">
+      <UniqueIdentifier>{dd4149a7-6362-46fb-a80e-629bc18b8ece}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules">
+      <UniqueIdentifier>{4b5823ac-f11c-40be-9282-2a6c536601b8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\OpenGL">
+      <UniqueIdentifier>{ac087ec1-3200-491a-9196-234ca7478389}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\OpenGL\Shaders">
+      <UniqueIdentifier>{2128bc0a-7bb8-451c-a317-55025c6d8257}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\Utilities">
+      <UniqueIdentifier>{ce456f36-c151-4b58-a86e-f286ad715d9c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
-      <Filter>Source Files\OpenGL</Filter>
+      <Filter>Miscellaneous Dependencies\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_glfw.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_opengl3.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="opengl_utilities.cpp">
+      <Filter>Modules\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="opengl_circles.cpp">
+      <Filter>Modules\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="opengl_user_input.cpp">
+      <Filter>Modules\OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_glfw.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_opengl3.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_opengl3_loader.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Header Files\ImGui</Filter>
+      <Filter>Miscellaneous Dependencies\ImGui Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="opengl.h">
+      <Filter>Modules\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="random.h">
+      <Filter>Modules\Utilities</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="circle.frag">
+      <Filter>Modules\OpenGL\Shaders</Filter>
+    </None>
+    <None Include="circle.vert">
+      <Filter>Modules\OpenGL\Shaders</Filter>
+    </None>
+    <None Include="line.frag">
+      <Filter>Modules\OpenGL\Shaders</Filter>
+    </None>
+    <None Include="line.vert">
+      <Filter>Modules\OpenGL\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
