--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -22,14 +22,17 @@
     <Filter Include="Modules\OpenGL\Shaders">
       <UniqueIdentifier>{2128bc0a-7bb8-451c-a317-55025c6d8257}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Modules\Perceptron">
-      <UniqueIdentifier>{8efe25d4-f4a3-4cd6-8149-3e2231c66244}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Utilities">
       <UniqueIdentifier>{ce456f36-c151-4b58-a86e-f286ad715d9c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Modules\Perceptron\MNIST Data">
+    <Filter Include="Modules\Training Data">
+      <UniqueIdentifier>{8efe25d4-f4a3-4cd6-8149-3e2231c66244}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\Training Data\MNIST Data">
       <UniqueIdentifier>{f30245d2-539f-460d-8cdf-ec3ef8f71e4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules\Perceptron">
+      <UniqueIdentifier>{d20e4c8c-2506-4e3f-8d68-06cfcbb96ed7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +108,9 @@
     <ClInclude Include="random.h">
       <Filter>Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="mnist_dataset.h">
+      <Filter>Modules\Training Data</Filter>
+    </ClInclude>
     <ClInclude Include="perceptron.h">
       <Filter>Modules\Perceptron</Filter>
     </ClInclude>
@@ -123,10 +129,10 @@
       <Filter>Modules\OpenGL\Shaders</Filter>
     </None>
     <None Include="train-images.idx3-ubyte">
-      <Filter>Modules\Perceptron\MNIST Data</Filter>
+      <Filter>Modules\Training Data\MNIST Data</Filter>
     </None>
     <None Include="train-labels.idx1-ubyte">
-      <Filter>Modules\Perceptron\MNIST Data</Filter>
+      <Filter>Modules\Training Data\MNIST Data</Filter>
     </None>
     <None Include="glsl_square.frag">
       <Filter>Modules\OpenGL\Shaders</Filter>
