we only corrupted the heap like a dozen times but by god's graceful light we made it through (and by god's light i mean debugging c++ on windows visual studio which is actually unironically goated)

--- a/Solution.vcxproj.filters
+++ b/Solution.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClCompile Include="opengl_squares.cpp">
       <Filter>Modules\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="perceptron_constructor.cpp">
+      <Filter>Modules\Perceptron</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
