--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="opengl_squares.cpp" />
     <ClCompile Include="opengl_user_input.cpp" />
     <ClCompile Include="opengl_utilities.cpp" />
+    <ClCompile Include="perceptron_constructor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c" />
