--- a/Solution.vcxproj
+++ b/Solution.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="opengl_user_input.cpp" />
     <ClCompile Include="opengl_utilities.cpp" />
     <ClCompile Include="perceptron_constructor.cpp" />
+    <ClCompile Include="perceptron_propagate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c" />
@@ -117,6 +118,7 @@
     <ClInclude Include="mnist_dataset.h" />
     <ClInclude Include="perceptron.h" />
     <ClInclude Include="random.h" />
+    <ClInclude Include="sigmoid.h" />
     <ClInclude Include="vec2f.h" />
   </ItemGroup>
   <ItemGroup>
